# rnaseq-analysis-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
configs/: analysis_case.template.yaml  step_registry.yaml
scripts/: __init__.py  __main__.py  configs  rnaseq_clustering.py  rnaseq_correlation.py  rnaseq_de.py  rnaseq_deepdive.py  rnaseq_dendrogram.py  rnaseq_expression.py  rnaseq_fermentation.py  rnaseq_filter.py  rnaseq_go.py  rnaseq_grid_search.py  rnaseq_gsea.py  rnaseq_heterologous.py  rnaseq_kegg.py  rnaseq_pca.py  rnaseq_remote_preprocess.sh  rnaseq_remote_setup.sh  rnaseq_run.py  rnaseq_setup.py  rnaseq_temporal.py  rnaseq_transporter.py
scripts/core/: config_data.py  config_runtime.py  de_helpers.py  docgen.py  grid_search.py  logger.py  net.py  pipeline_state.py  plotting.py  prepare_analysis_case.py  runner.py  stats.py  validation.py
scripts/steps/: cluster_deepdive.py  correlation.py  de_screening.py  dendrogram.py  expression.py  fastp.py  fermentation_overview.py  gene_clustering.py  gene_filtering.py  go_enrichment.py  gsea.py  heterologous_genes.py  hisat2_align.py  hisat2_index.py  htseq_count.py  kegg_enrichment.py  pca.py  temporal_causality.py  transporter_aminopeptidase.py
skills/rnaseq-analysis/: SKILL.md  scripts
skills/rnaseq-analysis/agents/: openai.yaml
skills/rnaseq-analysis/configs/: analysis_case.template.yaml
skills/rnaseq-analysis/references/: _deprecated_rnaseq-setup-wizard.md  rnaseq-gsea.md  (+28 more)
tests/: conftest.py  test_analysis_case_preprocessing.py  test_runner_steps.py
